@startuml

title __VIEW_HOLDER's Class Diagram__\n

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      namespace view_holder {
        class com.example.simple_chat.recycler_view_adapter.view_holder.CalendarViewHolder {
            + datePicker : DatePicker
            + messageArea : LinearLayout
            + root : LinearLayout
            + CalendarViewHolder()
        }
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      namespace view_holder {
        class com.example.simple_chat.recycler_view_adapter.view_holder.ImageViewHolder {
            + image : ImageView
            + messageArea : LinearLayout
            + root : LinearLayout
            + text : TextView
            + ImageViewHolder()
        }
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      namespace view_holder {
        class com.example.simple_chat.recycler_view_adapter.view_holder.MusicViewHolder {
            + btnPlay : ImageView
            + messageArea : LinearLayout
            + playControlArea : LinearLayout
            + playState : TextView
            + root : LinearLayout
            + seekBar : SeekBar
            + title : TextView
            + MusicViewHolder()
        }
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      namespace view_holder {
        class com.example.simple_chat.recycler_view_adapter.view_holder.PlanViewHolder {
            + comment : ImageView
            + date : TextView
            + edit : ImageView
            + messageArea : LinearLayout
            + name : TextView
            + root : LinearLayout
            + time : TextView
            + PlanViewHolder()
        }
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      namespace view_holder {
        class com.example.simple_chat.recycler_view_adapter.view_holder.PlanViewHolder.Value {
            + day : int
            + hour : int
            + minute : int
            + month : int
            + name : String
            + provide : String
            + remark : String
            + year : int
        }
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      namespace view_holder {
        class com.example.simple_chat.recycler_view_adapter.view_holder.TextViewHolder {
            + messageArea : LinearLayout
            + root : LinearLayout
            + text : TextView
            + TextViewHolder()
        }
      }
    }
  }
  

  namespace com.example.simple_chat {
    namespace recycler_view_adapter {
      namespace view_holder {
        class com.example.simple_chat.recycler_view_adapter.view_holder.TimeViewHolder {
            + btnChange : ImageView
            + clock : TextClock
            + messageArea : LinearLayout
            + root : LinearLayout
            + text : TextView
            + time : TimePicker
            + TimeViewHolder()
        }
      }
    }
  }
  

  com.example.simple_chat.recycler_view_adapter.view_holder.CalendarViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.simple_chat.recycler_view_adapter.view_holder.ImageViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.simple_chat.recycler_view_adapter.view_holder.MusicViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.simple_chat.recycler_view_adapter.view_holder.PlanViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.simple_chat.recycler_view_adapter.view_holder.PlanViewHolder o-- com.example.simple_chat.recycler_view_adapter.view_holder.PlanViewHolder.Value : value
  com.example.simple_chat.recycler_view_adapter.view_holder.PlanViewHolder +-down- com.example.simple_chat.recycler_view_adapter.view_holder.PlanViewHolder.Value
  com.example.simple_chat.recycler_view_adapter.view_holder.TextViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.simple_chat.recycler_view_adapter.view_holder.TimeViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
